--- a/src/Components/BeeswarmChart/BeeswarmChart.scss
+++ b/src/Components/BeeswarmChart/BeeswarmChart.scss
@@ -1,6 +1,7 @@
 .BeeswarmChart {
   &__header {
     width: 100%;
-    padding: 30px 0 0 120px;
+    padding: 50px 0 0 120px;
+    margin: 0;
   }
 }
